Mapping and Counting modules complete

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -31,4 +31,46 @@ process {
         ]
     }
 
+    withName: 'QUARTO_REPORT' {
+        publishDir = [
+            path: { "${params.outdir}/reports" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'SAMTOOLS_TOFASTQ' {
+        publishDir = [
+            path: { "${params.outdir}/reads" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+        ext.args = "-T '*'"
+    }
+
+    withName: 'SAMTOOLS_INDEX' {
+        publishDir = [
+            path: { "${params.outdir}/alignments" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'PYCHOPPER' {
+        ext.args = "-k PCS109"
+    }
+
+    withName: 'MINIMAP2_ALIGN_CDNA' {
+        ext.args = "-ax splice"
+    }
+
+    withName: 'MINIMAP2_ALIGN_DRNA' {
+        ext.args = "-ax splice -uf -k14"
+    }
+
+    
+    
+
+    
+
 }
