nextflow congif update

--- a/conf/params.config
+++ b/conf/params.config
@@ -9,9 +9,8 @@ params {
     // Pipeline-specific options
     // Input options
     input                        = null
-    multiqc_reports              = Channel.empty()
     // Boilerplate options
-    outdir                       = null
+    outdir                       = './results'
     publish_dir_mode             = 'copy'
     igenomes_base                = 's3://ngi-igenomes/igenomes/'
     email                        = null
@@ -23,7 +22,6 @@ params {
     help_full                    = false
     show_hidden                  = false
     version                      = false
-    pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
     pipelines_testdata_base_path = '/workspaces/nf-core-oncoseq/test_data/'
     trace_report_suffix          = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')// Config options
     config_profile_name          = null
