increase execution time for CAT_FASTQ

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -57,6 +57,10 @@ process {
         ]
     }
 
+    withName: 'CAT_FASTQ' {
+        time = '60.m'
+    }
+
     withName: 'PYCHOPPER' {
         ext.args = "-k PCS109"
     }
