faulty configs corrections

--- a/conf/profiles/test.config
+++ b/conf/profiles/test.config
@@ -47,4 +47,5 @@ apptainer {
     autoMounts=true                           // Automatically mount common host paths
     runOptions = '--writable-tmpfs'           // Use writable tmpfs for container
     cacheDir = "/tmp/apptainer/cache"         // Use /tmp for image cache in test
+    pullTimeout = '20 min'
 }
