--- a/conf/resources/time.config
+++ b/conf/resources/time.config
@@ -1,11 +1,18 @@
 process {
-    // GPU Definitions
-    withLabel:process_single_gpu {
-        containerOptions = "--nv" 
-        clusterOptions = "--gpus-per-node=1"
+    // Time Definitions
+    withLabel:process_very_low_time {
+        time = { check_max( 30.min * task.attempt, 'time' ) }
     }
-    withLabel:process_gpu {
-        containerOptions = "--nv" 
-        clusterOptions = "--gpus-per-node=4"
+    withLabel:process_low_time {
+        time = { check_max( 2.h * task.attempt, 'time' ) }
+    }
+    withLabel:process_medium_low_time {
+        time = { check_max( 4.h * task.attempt, 'time' ) }
+    }
+    withLabel:process_medium_time {
+        time = { check_max( 6.h * task.attempt, 'time' ) }
+    }
+    withLabel:process_high_time {
+        time = { check_max( 22.h * task.attempt, 'time' ) }
     }
 }
