--- a/conf/profiles/drac.config
+++ b/conf/profiles/drac.config
@@ -9,6 +9,11 @@ process {
     executor = 'slurm'
     array = 96
     errorStrategy = { task.exitStatus in ((130..145) + 104) ? 'retry' : 'ignore' }
+
+    withName: 'PYCHOPPER' {
+        label = "process_medium_low_time"
+        label = "process_low_memory"
+    }
 }
 
 executor {
