increase pychopper time resources on drac

--- a/conf/profiles/drac.config
+++ b/conf/profiles/drac.config
@@ -9,6 +9,7 @@ process {
     executor = 'slurm'
     array = 96
     errorStrategy = { task.exitStatus in ((130..145) + 104) ? 'retry' : 'ignore' }
+    scratch = '$SLURM_TMPDIR'
 
     withName: 'PYCHOPPER' {
         label = "process_medium_low_time"
@@ -34,6 +35,13 @@ apptainer {
         autoMounts=true
         runOptions = "-B /project/ctb-noncodo/Platform/references"
         libraryDir = "$HOME/scratch/apptainer_lib/"
-        cacheDir = "$HOME/scratch/apptainer_cache/"
+        cacheDir = "${System.getenv('SLURM_TMPDIR')}/apptainer_cache"
         pullTimeout = '180 min'
+}
+
+env {
+    APPTAINER_CACHEDIR = "${System.getenv('SLURM_TMPDIR')}"
+    APPTAINER_TMPDIR = "${System.getenv('SLURM_TMPDIR')}"
+    SINGULARITY_CACHEDIR = "${System.getenv('SLURM_TMPDIR')}"
+    SINGULARITY_TMPDIR = "${System.getenv('SLURM_TMPDIR')}"
 }
