--- a/conf/profiles/drac.config
+++ b/conf/profiles/drac.config
@@ -5,43 +5,29 @@ the SLURM login nodes
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 */
 
+apptainer {
+    enabled = true
+    autoMounts = true
+    runOptions = "-B /project/ctb-noncodo/Platform/references"
+    libraryDir = "$HOME/scratch/apptainer_lib/"
+    cacheDir = "\${SLURM_TMPDIR}/apptainer_cache"  
+    pullTimeout = '180 min'
+}
+
+env {
+    APPTAINER_CACHEDIR = "\${SLURM_TMPDIR}"  
+    APPTAINER_TMPDIR = "\${SLURM_TMPDIR}"
+    SINGULARITY_CACHEDIR = "\${SLURM_TMPDIR}"
+    SINGULARITY_TMPDIR = "\${SLURM_TMPDIR}"
+}
+
 process {
     executor = 'slurm'
     array = 96
     errorStrategy = { task.exitStatus in ((130..145) + 104) ? 'retry' : 'ignore' }
-    scratch = '$SLURM_TMPDIR'
-
+    scratch = "\$SLURM_TMPDIR"  
+    
     withName: 'PYCHOPPER' {
         label = "process_medium_low_time"
-        label = "process_low_memory"
     }
-}
-
-executor {
-    name            = "slurm"
-    pollInterval    = '60 sec'
-    submitRateLimit = '60/1min'
-    queueSize       = 100
-}
-
-params {
-        max_memory='249G'
-        max_cpus=64
-        max_time='168h'
-        publish_dir_mode = 'link'
-}
-apptainer {
-        enabled=true
-        autoMounts=true
-        runOptions = "-B /project/ctb-noncodo/Platform/references"
-        libraryDir = "$HOME/scratch/apptainer_lib/"
-        cacheDir = "${System.getenv('SLURM_TMPDIR')}/apptainer_cache"
-        pullTimeout = '180 min'
-}
-
-env {
-    APPTAINER_CACHEDIR = "${System.getenv('SLURM_TMPDIR')}"
-    APPTAINER_TMPDIR = "${System.getenv('SLURM_TMPDIR')}"
-    SINGULARITY_CACHEDIR = "${System.getenv('SLURM_TMPDIR')}"
-    SINGULARITY_TMPDIR = "${System.getenv('SLURM_TMPDIR')}"
 }
