switched pychopper module to a local module and modified labels

--- a/conf/profiles/drac.config
+++ b/conf/profiles/drac.config
@@ -10,7 +10,7 @@ process {
     array = 96
     errorStrategy = { task.exitStatus in ((130..145) + 104) ? 'retry' : 'ignore' } 
     
-    withName: 'PYCHOPPER' {
+    withName: '*YCHOPPE*' {
         label = "process_medium_low_time"
     }
 }
