pychopper time modification

--- a/conf/profiles/drac.config
+++ b/conf/profiles/drac.config
@@ -10,8 +10,8 @@ process {
     array = 96
     errorStrategy = { task.exitStatus in ((130..145) + 104) ? 'retry' : 'ignore' } 
     
-    withName: '*YCHOPPE*' {
-        label = "process_medium_low_time"
+    withName: 'PYCHOPPER' {
+        label = 'process_medium_low_time'
     }
 }
 
