add MD-ALL module

--- a/conf/params.config
+++ b/conf/params.config
@@ -9,6 +9,13 @@ params {
     // Pipeline-specific options
     // Input options
     input                        = null
+    reference_dir                = null
+    // MDALL parameters
+    mdall_feature_n = "1000,1058"
+    run_mdall = false
+    // Module system (only used when modules are available)
+    r_module = 'R/4.2.0'
+    bioconductor_modules = 'DESeq2/1.38.0:SummarizedExperiment/1.28.0'
     // Boilerplate options
     outdir                       = './results'
     publish_dir_mode             = 'copy'
