set reference data directory

--- a/conf/params.config
+++ b/conf/params.config
@@ -9,7 +9,7 @@ params {
     // Pipeline-specific options
     // Input options
     input                        = null
-    reference_dir                = null
+    reference_dir                = './reference_data'
     // MDALL parameters
     mdall_feature_n = "1000,1058"
     run_mdall = false
