--- a/conf/profiles/drac.config
+++ b/conf/profiles/drac.config
@@ -11,7 +11,7 @@ process {
     errorStrategy = { task.exitStatus in ((130..145) + 104) ? 'retry' : 'ignore' } 
     
     withName: 'PYCHOPPER' {
-        label = 'process_medium_low_time'
+        label = 'process_medium_time'
     }
 }
 
