--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,5 @@
 	path = modules/local/samtools
 	url = https://github.com/chusj-pigu/wf-modules.git
 	branch=samtools
+[submodule "modules/local/oarfish"]
+	path = modules/local/oarfish
