--- a/conf/modules.config
+++ b/conf/modules.config
@@ -15,7 +15,7 @@ process {
     publishDir = [
         path: { "${params.outdir ?: 'results'}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
         mode: params.publish_dir_mode,
-        pattern: '*.{indexed.bam,featureCounts_arranged.tsv,out.fastq.gz,tsv,tsv.summary,txt,csv,html,yml,json}',
+        pattern: '*.{indexed.bam,featureCounts_arranged.tsv,out.fastq.gz,tsv,tsv.summary,txt,csv,html,yml,json,quant}',
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
@@ -73,7 +73,13 @@ process {
         ext.args = "-ax splice -uf -k14"
     }
 
-    
+    withName: 'OARFISH_QUANTIFY_FQ' {
+        publishDir = [
+            path: { "${params.outdir}/oarfish" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
     
 
     
